[package]
name = "vlugger"
version = "0.2.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "Vlugger is a plugin manager for Vim"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/wafelack/vlugger"
keywords = ["vim", "plugins", "manager"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
